--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.7.0
 attrs==24.2.0
 bcrypt==4.2.1
+black==24.10.0
 blinker==1.9.0
 cachetools==5.5.0
 captcha==0.6.0
@@ -25,12 +26,16 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 motor==3.6.0
+mypy-extensions==1.0.0
 mysql-connector-python==9.1.0
 narwhals==1.16.0
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
+pathspec==0.12.1
 pillow==11.0.0
+platformdirs==4.3.6
+plotly==5.24.1
 protobuf==5.29.1
 pyarrow==18.1.0
 pydantic==2.10.3
@@ -55,6 +60,7 @@ streamlit==1.40.2
 streamlit-authenticator==0.4.1
 tenacity==9.0.0
 toml==0.10.2
+tomli==2.2.1
 tornado==6.4.2
 typing_extensions==4.12.2
 tzdata==2024.2
